[tool.poetry]
name = "bonds"
version = "0.1.0"
description = ""
authors = ["serakate <serakate@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
requests = "^2.30.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
